Ejercicio de SPA (5/)

--- a/javaScript/Jon Mircha/SPA/App/Assets/Style.css
+++ b/javaScript/Jon Mircha/SPA/App/Assets/Style.css
@@ -43,11 +43,34 @@ img{
   background-color: #dc3545;
 }
 
+.form-search{
+  margin: auto;
+  text-align: center;
+}
+
+.header{
+  padding: 0.5rem;
+  position: sticky;
+  top: 0;
+  text-align: center;
+  background-color: #fff;
+}
+
+.header > *{
+  margin: 1rem auto;
+}
+
+.form-search input{
+  display: block;
+  margin: auto;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+}
+
 .loader{
   margin: 1rem auto;
   display: block;
   width: 4rem;
   height: 4rem;
 }
-
-
