--- a/Webpack_Jon/src/style.css
+++ b/Webpack_Jon/src/style.css
@@ -1,12 +1,34 @@
 
+@font-face{
+  font-family: "Chalet";
+  font-style: normal;
+  font-weight: normal;
+  /* src: url("./assets/chalet.woff")format("woff"); */
+}
 
-
-
-
-html{
+html {
   box-sizing: border-box;
   font-family: sans-serif;
   font-size: 16px;
   background-color: #2b3a42;
   color: #8dd;
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+img{
+  max-width: 100%;
+  height: auto;
+
+}
+
+.icon{
+  max-width: 4rem;
 }
