--- a/Webpack_Jon/src/style.css
+++ b/Webpack_Jon/src/style.css
@@ -3,15 +3,17 @@
   font-family: "Chalet";
   font-style: normal;
   font-weight: normal;
-  /* src: url("./assets/chalet.woff")format("woff"); */
+  src: url("./assets/chalet.woff")format("woff");
 }
 
 html {
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: "Chalet",sans-serif;
   font-size: 16px;
   background-color: #2b3a42;
-  color: #8dd;
+  color: #8dd6f9;
+  background-image: url("assets/batman.jpg") ;
+  background-size: cover;
 }
 
 body {
